style(css): :lipstick: add #EFWebCoreAutoExport styling
Added styling to #EFWebCoreAutoExport to avoid a breaking progress display during serialized static file generation.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -27,6 +27,16 @@ html {
 	left: 5px;
 	padding: 0 4px;
 }
+#EFWebCoreAutoExport {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 99999;
+	padding: 10px;
+	background: #000;
+	color: #fff;
+}
 
 body {
 	display: flex;
