refactor(css): :recycle: redesign wireframe

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,3 +1,8 @@
+:root {
+	--menu-button-size: calc(2em + 14px);
+	--header-height: 85px;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -13,7 +18,7 @@ a {
 	color: #fff;
 }
 a:hover {
-	color: orange;
+	color: #ffa500;
 }
 a[href^="http"]:not([class^="ef-hide-ext"]):after {
     display: inline-block;
@@ -27,15 +32,22 @@ a[href^="http"]:not([class^="ef-hide-ext"]):after {
 	background-size: contain;
 }
 
-/* flex layout utility */
-.flex-container {
-	display: flex;
+/* header */
+header, label#nav-button {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: var(--header-height);
 }
-.flex-1 {
-	flex: 1;
+header {
+	z-index: 7;
+	background-color: #000;
+}
+label#nav-button {
+	cursor: pointer;
+	z-index: 8;
 }
 
-/* body area */
 header h1 {
 	font-size: 4em;
 	letter-spacing: 2px;
@@ -51,80 +63,61 @@ header h1 {
 	background: url(../img/logo.png) no-repeat;
 	background-size: contain;
 }
+
+/* navigation */
 nav {
-	overflow: hidden;
-	white-space: nowrap;
+	position: fixed;
+	z-index: 7;
+	padding: 0 20px;
+	width: 100%;
+	height: 100vh;
+	left: -100vw;
+	transition: left .2s;
+	background-color: rgba(0, 0, 0, 0.9);
+	overflow: auto;
 }
-nav > * {
-	padding-right: 20px;
+input#nav-state {
+	position: fixed;
+	left: -100vw;
 }
-nav h1 {
-	margin: 0 4px 0;
+
+#nav-state:checked ~ nav {
+	left: 0vw;
+}
+
+nav ul {
+	padding-left: 0;
 }
 nav li {
 	position: relative;
 	list-style: none;
 }
+
+
+/* body area */
 main {
+	margin-top: var(--header-height);
 	border-left: 1px solid white;
 	padding: 0 20px;
 	overflow: hidden;
 }
 
 /* news */
-#news {
-	display: flex;
-	margin-bottom: 1em;
-}
-#news article a {
-	display: inline-block;
-	border: 1px solid gray;
-	padding: 4px 8px;
-}
-#news article a ~ a {
-	border-left: 1px solid gray;
-}
-#news cite, #news time {
+#news cite {
 	display: block;
-}
-#news a {
-	position: relative;
-}
-#news a[href^="http"]:after {
-	position: absolute;
-	left: auto;
-	right: 0;
-	bottom: 4px;
 }
 
 /* footer */
 footer {
-	text-align: center;
+	padding: 20px;
 	background-color: rgba(0, 0, 0, 0.2);
-}
-footer > section {
-	display: inline-block;
-	position: relative;
-	vertical-align: top;
-	padding: 30px 20px;
-	text-align: left;
-}
-footer section ~ section::before {
-	display: inline-block;
-	position: absolute;
-	top: 30px;
-	left: -2px;
-	height: 150px;
-	content: " ";
-	border-left: 1px solid #e4e4e4;
-	vertical-align: middle;
 }
 footer .uk-button-group {
 	display: inline-flex;
 	vertical-align: middle;
 	position: relative;
 }
-footer .uk-button-group a ~ a{
+footer .uk-button-group a ~ a {
 	margin-left: 6px; 
 }
 
