--- a/www/css/main.css
+++ b/www/css/main.css
@@ -67,7 +67,7 @@ header h1 {
 nav {
 	position: fixed;
 	z-index: 7;
-	padding: 0 20px;
+	padding: 0 20px 100px;
 	width: 100%;
 	height: 100vh;
 	left: -100vw;
