--- a/www/css/main.css
+++ b/www/css/main.css
@@ -49,8 +49,13 @@ label#nav-button {
 	cursor: pointer;
 	z-index: 8;
 }
+label#nav-button:hover ~ * .ef-logo {
+	background: url(../img/menu.png) no-repeat;
+	background-size: contain;
+}
 
 header h1 {
+	margin-top: 0;
 	font-size: 4em;
 	letter-spacing: 2px;
 	overflow: hidden;
