refactor(css): :recycle: rename condetails element

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -125,7 +125,7 @@ main {
 main.ef-landingpage {
 	padding-top: 100vh;
 }
-#home {
+#ef-condetails {
 	position: absolute;
 	top: 0;
 	padding: 20px;
