docs(css): :technologist: add uikit breakpoints to responsive.css
for easier lookup during development

--- a/www/css/responsive.css
+++ b/www/css/responsive.css
@@ -1,3 +1,10 @@
+/*
+	--uk-breakpoint-s: 640px;
+	--uk-breakpoint-m: 960px;
+	--uk-breakpoint-l: 1200px;
+	--uk-breakpoint-xl: 1600px;
+*/
+  
 @media (max-width: 1080px) {
 	:root {
 		--header-height: 46px;
