fix(css): :bug: fix anchor targeting

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -34,6 +34,12 @@ a[href^="http"]:not([class^="ef-hide-ext"]):after {
 	background-size: contain;
 }
 
+/* fix anchor targeting */
+:target {
+	border-top: var(--header-height) solid transparent;
+	margin-top: calc(0 - var(--header-height));
+}
+
 /* header */
 header, label#nav-button {
 	position: fixed;
