fix(css): :bug: fix iOS background-attachment issue
iOS does not support background-attachment: fixed; hence this workaround

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -9,6 +9,12 @@ html {
 	background: #333;
 	color: #fff;
 }
+main {
+	background-color: #333;
+	background-image: none;
+	background-repeat: no-repeat;
+	background-attachment: scroll;
+}
 h1, h2, h3, h4, h5, h6 {
 	color: #fff;
 }
