--- a/www/css/responsive.css
+++ b/www/css/responsive.css
@@ -4,10 +4,24 @@
 	--uk-breakpoint-l: 1200px;
 	--uk-breakpoint-xl: 1600px;
 */
+
+/* mobile browser do not support 
+   background-attachment: fixed for performance reasons,
+   the following fix enables it only on desktop */
+   @media only screen and (min-width: 64.063em) {
+	main {
+		background-attachment: fixed;
+		background-position-y: var(--header-height);
+		background-position-x: center;
+	}
+}
   
 @media (max-width: 1080px) {
 	:root {
 		--header-height: 46px;
+	}
+	main {
+		background-position-y: 0;
 	}
 	header h1 {
 		padding-left: .25em;
