--- a/www/css/theme.css
+++ b/www/css/theme.css
@@ -2,6 +2,9 @@
     --ef-palette-1: #ffa500;
     --ef-palette-2: #fff;
 }
+main {
+    background-image: url('../img/sample_background_by_Vinaru.jpg');
+}
 
 main a {
 	color: var(--ef-palette-1);
