fix(css): :bug: combine mobile bg & menu bg scroll bugfixes
https://github.com/dogpixels/EFWebCore/commit/329659490f8a06ab9b56c36de7aba927f3ce3e36 had changed the way background behave on mobile devices, affecting another bug fix, https://github.com/dogpixels/EFWebCore/commit/570b780c35dfda8cae8ecc670b8b2358ff01641e, about stopping the background from scrolling when nav is open. This commit attempts to combine both changes into a working set of instructions.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -8,13 +8,28 @@
 html {
 	background: #333;
 	color: #fff;
-    overflow-y: scroll;
 }
 main {
 	background-color: #333;
 	background-image: none;
 	background-repeat: no-repeat;
-	background-attachment: scroll;
+}
+/* mobile browser do not support 
+   background-attachment: fixed for performance reasons,
+   the following fix enables it only on desktop */
+   @media only screen and (min-width: 1080px) {
+	main {
+		background-attachment: fixed;
+		background-size: cover;
+		background-position-y: var(--header-height);
+		background-position-x: center;
+	}
+}
+@media only screen and (max-width: 1080px) {
+	main {
+		background-attachment: scroll;
+		background-position-y: 0;
+	}
 }
 h1, h2, h3, h4, h5, h6 {
 	color: #fff;
